  plug-in.
- The timer selection was moved from configure time to measurement
  time. During configure we detect all available timers and provide
  the environment variable SCOREP_TIMER to select one. The timer
  defaults to a low-overhead time stamp counter, if available. Note
  that we assume all processes to use the same timer and time stamp
  counter timers to run at the same frequency.

User tools and API improvements and changes:

- A Score-P installation provides new instrumentation wrappers which
  simplify the application instrumentation of autotools and CMake based
  projects.  Please consult the usage instruction of the 'scorep-wrapper'
  command.
- The option --pomp does not take any options any more.
- Specific options for OPARI2 are passed via the
  --opari=<parameter-list> option.
- To enable or disable instrumentation of OpenMP the options
  --openmp and --noopenmp have been added. Note that for compile
  units with enabled OpenMP compilerflag, instrumentation is
  enabled by default. However, when manually disabling, some
  instrumentation must still be carried out, to ensure a
  thread-safe execution of the measurement system.
- POMP user instrumentation is no longer automatically activated
  together with OpenMP instrumentation. The --pomp flag has to be
  explicitly specified with the scorep command.
- On Cray systems, compiler instrumentation does not add '-G2' option
  anymore, which disables some optimizations.
- The instrumenter now warns the user, if the provided instrument filter
  wont be used by the active instrumentations.

Bugfixes:

- Fixes a possible segementation fault in the user adapter.
- Fixes an unitialized variable in the instrumenter.
- Fixed possible mistreatment of a profile node as being in an untied
  task.
- Fix bug in obtaining executable names longer than 512 characters
  when using the GNU compiler adapter (applies also to Cray and
  Fujitsu compilers).