@@ -1,0 +1,24 @@
+CC=powerpc64-bgq-linux-gcc
+CXX=powerpc64-bgq-linux-g++
+F77=powerpc64-bgq-linux-gfortran
+FC=powerpc64-bgq-linux-gfortran
+
+#CPPFLAGS=
+#CFLAGS=
+#CXXFLAGS=
+#FFLAGS=
+#FCFLAGS=
+#LDFLAGS=
+#LIBS=
+CC=powerpc64-bgq-linux-gcc
+CXX=powerpc64-bgq-linux-g++
+F77=powerpc64-bgq-linux-gfortran
+FC=powerpc64-bgq-linux-gfortran
+
+#CPPFLAGS=
+#CFLAGS=
+#CXXFLAGS=
+#FFLAGS=
+#FCFLAGS=
+#LDFLAGS=
+#LIBS=
