@@ -1,0 +1,24 @@
+CC_FOR_BUILD=gcc
+CXX_FOR_BUILD=g++
+F77_FOR_BUILD=gfortran
+FC_FOR_BUILD=gfortran
+
+#CPPFLAGS_FOR_BUILD=
+#CFLAGS_FOR_BUILD=
+#CXXFLAGS_FOR_BUILD=
+#FFLAGS_FOR_BUILD=
+#FCFLAGS_FOR_BUILD=
+#LDFLAGS_FOR_BUILD=
+#LIBS_FOR_BUILD=
+CC_FOR_BUILD=gcc
+CXX_FOR_BUILD=g++
+F77_FOR_BUILD=gfortran
+FC_FOR_BUILD=gfortran
+
+#CPPFLAGS_FOR_BUILD=
+#CFLAGS_FOR_BUILD=
+#CXXFLAGS_FOR_BUILD=
+#FFLAGS_FOR_BUILD=
+#FCFLAGS_FOR_BUILD=
+#LDFLAGS_FOR_BUILD=
+#LIBS_FOR_BUILD=
