@@ -1,0 +1,24 @@
+MPICC=mpigcc
+MPICXX=mpig++
+MPIF77=mpigfortran
+MPIFC=mpigfortran
+
+#MPI_LDFLAGS=
+#MPI_LIBS=
+#MPI_CPPFLAGS=
+#MPI_CFLAGS=
+#MPI_CXXFLAGS=
+#MPI_FFLAGS=
+#MPI_FCFLAGS=
+MPICC=mpigcc
+MPICXX=mpig++
+MPIF77=mpigfortran
+MPIFC=mpigfortran
+
+#MPI_LDFLAGS=
+#MPI_LIBS=
+#MPI_CPPFLAGS=
+#MPI_CFLAGS=
+#MPI_CXXFLAGS=
+#MPI_FFLAGS=
+#MPI_FCFLAGS=
